# halalificator-2

./: .gitignore  README.md  app.py  halalificator_colab.ipynb  process_audio.py  process_video.py  pyproject.toml  start_server.sh  start_tunnel.py
static/: app.js  index.html  style.css
